--- a/.config/nginx/mysite.conf
+++ b/.config/nginx/mysite.conf
@@ -10,6 +10,6 @@ server {
     }
 
     location /static/ {
-        alias /srv/django-project/static/:
+        alias /srv/django-project/static/;
     }
 }
